--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.2.0",
     "antd": "^5.26.6",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "react": "^19.1.0",
